0.1-alpha3/_sources/gene/AGAP013019.rst.txt
:orphan:



AGAP013019
==========

Location: **2R:47,822,686-47,823,675**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP013019>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:47822686-47823675#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/GWA/2/1/index`
      - IHS
      - Guinea Bissau
      - 2R:47,780,000-47,940,000
      - 117
      - 99.9%
      - nan
    




Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/GWA/2/2/index`
      - H12
      - Guinea Bissau
      - 2R:47,740,000-47,800,000
      - 380
      - 98.9%
      - nan
    * - :doc:`../signal/XPEHH/GWA.BFM/2/2/index`
      - XPEHH
      - Guinea Bissau
      - 2R:47,760,000-47,800,000
      - 303
      - 99.9%
      - nan
    * - :doc:`../signal/XPEHH/GWA.BFS/2/3/index`
      - XPEHH
      - Guinea Bissau
      - 2R:47,760,000-47,800,000
      - 167
      - 98.6%
      - nan
    * - :doc:`../signal/XPEHH/GWA.UGS/2/2/index`
      - XPEHH
      - Guinea Bissau
      - 2R:47,740,000-47,800,000
      - 113
      - 95.0%
      - nan
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP013019';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


